@@ -28,8 +28,8 @@ import org.apache.lucene.index.DocIDMerger;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.FieldInfos;
 import org.apache.lucene.index.MergeState;
+import org.apache.lucene.index.StoredFieldDataInput;
 import org.apache.lucene.index.StoredFieldVisitor;
-import org.apache.lucene.store.DataInput;
 import org.apache.lucene.util.Accountable;
 import org.apache.lucene.util.BytesRef;
 
@@ -73,10 +73,11 @@ public abstract class StoredFieldsWriter implements Closeable, Accountable {
   /** Writes a stored double value. */
   public abstract void writeField(FieldInfo info, double value) throws IOException;
 
-  /** Writes a stored binary value from a {@link DataInput} and a {@code length}. */
-  public void writeField(FieldInfo info, DataInput value, int length) throws IOException {
+  /** Writes a stored binary value from a {@link StoredFieldDataInput}. */
+  public void writeField(FieldInfo info, StoredFieldDataInput value) throws IOException {
+    int length = value.length();
     final byte[] bytes = new byte[length];
-    value.readBytes(bytes, 0, length);
+    value.getDataInput().readBytes(bytes, 0, length);
     writeField(info, new BytesRef(bytes, 0, length));
   }
 
@@ -191,8 +192,8 @@ public abstract class StoredFieldsWriter implements Closeable, Accountable {
     }
 
     @Override
-    public void binaryField(FieldInfo fieldInfo, DataInput value, int length) throws IOException {
-      writeField(remap(fieldInfo), value, length);
+    public void binaryField(FieldInfo fieldInfo, StoredFieldDataInput value) throws IOException {
+      writeField(remap(fieldInfo), value);
     }
 
     @Override
