@@ -18,6 +18,8 @@ package org.apache.lucene.document;
 
 import java.nio.charset.StandardCharsets;
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.StoredFieldDataInput;
+import org.apache.lucene.store.ByteArrayDataInput;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.tests.index.RandomIndexWriter;
 import org.apache.lucene.tests.util.LuceneTestCase;
@@ -64,6 +66,50 @@ public class TestBinaryDocument extends LuceneTestCase {
     assertTrue(binaryFldStoredTest.equals(binaryValStored));
 
     /** fetch the string field and compare its content with the original one */
+    String stringFldStoredTest = docFromReader.get("stringStored");
+    assertTrue(stringFldStoredTest.equals(binaryValStored));
+
+    writer.close();
+    reader.close();
+    dir.close();
+  }
+
+  public void testBinaryFieldFromDataInputInIndex() throws Exception {
+    FieldType ft = new FieldType();
+    ft.setStored(true);
+    byte[] byteArray = binaryValStored.getBytes(StandardCharsets.UTF_8);
+    StoredFieldDataInput storedFieldDataInput =
+        new StoredFieldDataInput(new ByteArrayDataInput(byteArray));
+    StoredField binaryFldStored = new StoredField("binaryStored", storedFieldDataInput);
+    Field stringFldStored = new Field("stringStored", binaryValStored, ft);
+
+    Document doc = new Document();
+
+    doc.add(binaryFldStored);
+
+    doc.add(stringFldStored);
+
+    /* test for field count */
+    assertEquals(2, doc.getFields().size());
+
+    /* add the doc to a ram index */
+    Directory dir = newDirectory();
+    RandomIndexWriter writer = new RandomIndexWriter(random(), dir);
+    writer.addDocument(doc);
+
+    /* open a reader and fetch the document */
+    IndexReader reader = writer.getReader();
+    Document docFromReader = reader.storedFields().document(0);
+    assertTrue(docFromReader != null);
+
+    /* fetch the binary stored field and compare its content with the original one */
+    BytesRef bytes = docFromReader.getBinaryValue("binaryStored");
+    assertNotNull(bytes);
+    String binaryFldStoredTest =
+        new String(bytes.bytes, bytes.offset, bytes.length, StandardCharsets.UTF_8);
+    assertTrue(binaryFldStoredTest.equals(binaryValStored));
+
+    /* fetch the string field and compare its content with the original one */
     String stringFldStoredTest = docFromReader.get("stringStored");
     assertTrue(stringFldStoredTest.equals(binaryValStored));
 
