@@ -1772,6 +1772,35 @@ public class TestIndexWriterExceptions extends LuceneTestCase {
     dir.close();
   }
 
+  /** test a null data input value doesn't abort the entire segment */
+  public void testNullStoredDataInputField() throws Exception {
+    Directory dir = newDirectory();
+    Analyzer analyzer = new MockAnalyzer(random());
+    IndexWriter iw = new IndexWriter(dir, new IndexWriterConfig(analyzer));
+    // add good document
+    Document doc = new Document();
+    iw.addDocument(doc);
+
+    expectThrows(
+        IllegalArgumentException.class,
+        () -> {
+          // set to null value
+          StoredFieldDataInput v = null;
+          Field theField = new StoredField("foo", v);
+          doc.add(theField);
+          iw.addDocument(doc);
+          fail("didn't get expected exception");
+        });
+
+    assertNull(iw.getTragicException());
+    iw.close();
+    // make sure we see our good doc
+    DirectoryReader r = DirectoryReader.open(dir);
+    assertEquals(1, r.numDocs());
+    r.close();
+    dir.close();
+  }
+
   public void testCrazyPositionIncrementGap() throws Exception {
     Directory dir = newDirectory();
     Analyzer analyzer =
